--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Submolior
+title: Submolior - Personal Blog
 email: rafgonza@bitib.cl
 description: > # this means to ignore newlines until "baseurl:"
   >NACE en el afán de almacenar y revisar las -tonteras- cuestiones en
@@ -24,11 +24,11 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "rafa.bitib.cl" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  LRGV
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: jekyll-theme-architect
 gems:
   - jekyll-feed
 exclude:
