--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ github_username:  LRGV
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-architect
+theme: jekyll-theme-merlot
 gems:
   - jekyll-feed
 exclude:
